--- a/src/package.json
+++ b/src/package.json
@@ -15,6 +15,9 @@
     "@trpc/next": "^9.26.2",
     "@trpc/react": "^9.26.2",
     "@trpc/server": "^9.26.2",
+    "bcryptjs": "^2.4.3",
+    "cookies-next": "^2.1.1",
+    "jsonwebtoken": "^8.5.1",
     "next": "12.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -23,6 +26,8 @@
     "zod": "^3.17.3"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
