--- a/src/package.json
+++ b/src/package.json
@@ -18,6 +18,7 @@
     "aws-sdk": "^2.1190.0",
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
+    "classnames": "^2.3.1",
     "cookies-next": "^2.1.1",
     "formidable": "^2.0.1",
     "jsonwebtoken": "^8.5.1",
