--- a/src/package.json
+++ b/src/package.json
@@ -23,6 +23,7 @@
     "formidable": "^2.0.1",
     "jsonwebtoken": "^8.5.1",
     "next": "12.2.3",
+    "next-progress": "^2.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.34.0",
