--- a/src/package.json
+++ b/src/package.json
@@ -10,6 +10,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@hookform/error-message": "^2.0.0",
     "@prisma/client": "^4.1.1",
     "@trpc/client": "^9.26.2",
     "@trpc/next": "^9.26.2",
