--- a/src/package.json
+++ b/src/package.json
@@ -22,6 +22,7 @@
     "classnames": "^2.3.1",
     "cookies-next": "^2.1.1",
     "formidable": "^2.0.1",
+    "framer-motion": "^7.0.0",
     "jsonwebtoken": "^8.5.1",
     "next": "12.2.3",
     "next-progress": "^2.2.0",
