--- a/src/package.json
+++ b/src/package.json
@@ -21,6 +21,7 @@
     "bcryptjs": "^2.4.3",
     "classnames": "^2.3.1",
     "cookies-next": "^2.1.1",
+    "dayjs": "^1.11.4",
     "formidable": "^2.0.1",
     "framer-motion": "^7.0.0",
     "jsonwebtoken": "^8.5.1",
