--- a/src/package.json
+++ b/src/package.json
@@ -49,6 +49,7 @@
     "eslint-config-prettier": "^8.5.0",
     "postcss": "^8.4.16",
     "prettier": "^2.7.1",
+    "prettier-plugin-organize-imports": "^3.0.3",
     "prisma": "^4.1.1",
     "tailwindcss": "^3.1.8",
     "typescript": "4.7.4"
